[package]
name = "algae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
logging = ["log"]
profiling = ["puffin"]

[dependencies]
glam = "0.20"
rspirv = "0.11.0"
algae_gpu = {path = "../algae_gpu"}
fxhash = "0.2.1"

puffin = {version = "0.12.1", optional = true}
log = {version = "0.4", optional = true}