[package]
name = "algae_grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
algae = {path = "../algae"}
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
syn = {version="1.0.57", features=["full","fold", "extra-traits"]}
quote = "1.0.8"
fxhash = "0.2.1"


[[example]]
name = "minimal"
