[package]
name = "vulkan_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


default = ["logging", "validation"]
logging = ["log"]
validation = []

[dependencies]
algae = {path = "../algae"}
algae_jit = {path = "../algae_jit"}

#vulkan wrapper
marp = {git = "https://gitlab.com/tendsinmende/marp.git"}
#winit bindings for marp
marp-surface-winit = {git = "https://gitlab.com/tendsinmende/marp.git"}

log = {version = "0.4", optional = true}

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

