[package]
name = "vulkan_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


default = ["logging", "validation"]
logging = ["log", "simple_logger"]
validation = []

[dependencies]
algae = {path = "../algae", features = ["logging"]}
algae_jit = {path = "../algae_jit", features = ["logging"]}
algae_grammar = {path = "../algae_grammar"}

#vulkan wrapper
marp = {git = "https://gitlab.com/tendsinmende/marp.git"}
#winit bindings for marp
marp-surface-winit = {git = "https://gitlab.com/tendsinmende/marp.git"}

log = {version = "0.4", optional = true}
simple_logger = {version = "2.1", optional = true}

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

